--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "news-explorer-frontend",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
     "moment": "^2.29.1",
-    "newsapi": "^2.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-escape-outside": "^0.1.2",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
